# agentic-system

./: .gitignore  README.md
agent/: __init__.py  main.py  pyproject.toml  tools.py
app/: database.py  main.py  models.py  pyproject.toml
app/tests/: conftest.py  test_main.py
evaluation/: __init__.py  __main__.py  aggregate.py  cli.py  config.py  loader.py  outcome.py  pyproject.toml  runner.py  types.py
evaluation/graders/: __init__.py  deterministic_tests.py  state_check.py  tool_calls.py
evaluation/suites/: coding.yaml
