[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Eric Du",email = "ericdu117@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
requests = "^2.32.5"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["."]

